[tool.poetry]
name = "queues"
version = "0.1.0"
description = "Play with kafkaesk"
authors = ["Marc Jou <smyslov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kafkaesk = "^0.1.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
